--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="The Pokémon version of the hangman game" />
+    <meta name="author" content="Gabriel Manussakis">
+
+    <meta property="og:locale" content="en" />
+    <meta property="og:url" content="https://react-pokemon-game.netlify.app">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="React Pokémon Game">
+    <meta property="og:description" content="The Pokémon version of the hangman game">
+    <meta property="og:image" content="%PUBLIC_URL%/favicon-512x512.png">
+    <meta property="og:site_name" content="React Pokémon Game">
+
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:site" content="https://twitter.com/manussakisg"/>
+    <meta name="twitter:title" content="React Pokémon Game"/>
+    <meta name="twitter:description" content="The Pokémon version of the hangman game"/>
+    <meta name="twitter:image" content="%PUBLIC_URL%/favicon-512x512.png" />
+
+    <meta name="application-name" content="React Pokémon Game" />
+    <meta name="theme-color" content="#09132D">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
+    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#09132d">
+    <meta name="msapplication-TileColor" content="#efecfb">
+    <meta name="theme-color" content="#ffffff">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React Pokémon Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
