--- a/public/index.html
+++ b/public/index.html
@@ -10,20 +10,20 @@
     <meta name="author" content="Gabriel Manussakis">
 
     <meta property="og:locale" content="en" />
-    <meta property="og:url" content="https://react-pokemon-game.netlify.app">
+    <meta property="og:url" content="https://pokemon-hangman-game.netlify.app">
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="React Pokémon Game">
+    <meta property="og:title" content="Pokémon Hangman Game">
     <meta property="og:description" content="The Pokémon version of the hangman game">
     <meta property="og:image" content="%PUBLIC_URL%/favicon-512x512.png">
-    <meta property="og:site_name" content="React Pokémon Game">
+    <meta property="og:site_name" content="Pokémon Hangman Game">
 
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:site" content="https://twitter.com/manussakisg"/>
-    <meta name="twitter:title" content="React Pokémon Game"/>
+    <meta name="twitter:title" content="Pokémon Hangman Game"/>
     <meta name="twitter:description" content="The Pokémon version of the hangman game"/>
     <meta name="twitter:image" content="%PUBLIC_URL%/favicon-512x512.png" />
 
-    <meta name="application-name" content="React Pokémon Game" />
+    <meta name="application-name" content="Pokémon Hangman Game" />
     <meta name="theme-color" content="#09132D">
 
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
@@ -47,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React Pokémon Game</title>
+    <title>Pokémon Hangman Game</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
